# RayTracerDemo

./: BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  Cartesian3.cpp  Cartesian3.h  Homogeneous4.cpp  Homogeneous4.h  Matrix4.cpp  Matrix4.h  MemoryTools.cpp  MemoryTools.h  Quaternion.cpp  Quaternion.h  RGBAImage.cpp  RGBAImage.h  RGBAValue.cpp  RGBAValue.h  Randomizer.h  RaytraceRenderWidget.cpp  RaytraceRenderWidget.h  ReadMe.txt  RenderController.cpp  RenderController.h  RenderParameters.h  RenderWindow.cpp  RenderWindow.h  TexturedObject.cpp  TexturedObject.h  Timer.h  Transform.cpp  Transform.h  compile_feng.sh  demo1-cornellbox.sh  demo2-arealight.sh  demo3-shpere.sh  demo4-triangles.sh  demo5-default.sh  main.cpp
Raytracer/: BVHTree.cpp  BVHTree.h  Camera.cpp  Camera.h  CollisionResult.cpp  CollisionResult.h  ColorTexture.cpp  ColorTexture.h  Cube.cpp  Cube.h  DiffuseLight.cpp  DiffuseLight.h  Lights.cpp  Lights.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  OBN.cpp  OBN.h  PDF.cpp  PDF.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Raytracer.cpp  Raytracer.h  Scene.cpp  Scene.h  Serialization.cpp  Serialization.h  Sphere.cpp  Sphere.h  TexturePool.cpp  TexturePool.h  Triangle.cpp  Triangle.h  TriangleMesh.cpp  TriangleMesh.h
Renderer/: Color.cpp  Color.h  MathUtils.h  RendererThread.cpp  RendererThread.h  Texture2D.cpp  Texture2D.h
Scene/: arealight.scene  cornellbox.scene  sphere.scene  triangles.scene
src/: glad.c
